Alterado Titulo da Página Inicial

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>  
-        <span class="title">Lojas Dinotop</span>
+        <span class="title">Lojas Dinotop App</span>
         <form action="/create" method="POST">
             <input name="title" placeholder="Nome">
             <input name="price" placeholder="Preço">
