--- a/static/style.css
+++ b/static/style.css
@@ -26,6 +26,14 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+
+.logout {
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  color: red;
 }
 
 .content {
