--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <header>  
+    <header>
+        <a class="logout" href="/logout">Logout</a>  
         <span class="title">Lojas Dinotop App</span>
         <form action="/create" method="POST">
             <input name="title" placeholder="Nome">
